// =============================================================
// CAPACITY MANAGEMENT MODULE — Weekly capacity per user
// Render: https://dbdiagram.io (Import → From DBML)
// =============================================================

Project capacity_module {
  database_type: 'MySQL'
  Note: 'Baseline weekly capacity per user. Combined with project_allocations for utilisation.'
}

// --- Stub (real definition in user-module) ---

Table users {
  id bigint [pk]
  Note: 'STUB — full definition in user-module.dbml'
}

// --- Core ---

Table employee_capacities {
  id bigint [pk, increment]
  user_id bigint [ref: - users.id]
  weekly_capacity_hours integer [default: 40]

  indexes {
    (user_id) [unique]
  }
  Note: '1:1 with users. Default 40 hours/week.'
}

TableGroup capacity_module [color: #f39c12] {
  employee_capacities
}

TableGroup ref [color: #bdc3c7] {
  users
}
